--- a/tri-harder/src/App.css
+++ b/tri-harder/src/App.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   height: 100%;
   font-family: Arial, sans-serif;
-  background-color: #ffffff;
+  background-color: #030303;
 }
 
 @keyframes colorChange {
