--- a/tri-harder/src/styles/header.css
+++ b/tri-harder/src/styles/header.css
@@ -1,18 +1,22 @@
-.logo-container{
+.logo-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
 }
-.header-container{
+
+.header-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;   
-     min-width: 100 vw;
-    background-color: white; /* Lighter Gray */
+    justify-content: center;
+    align-items: center;
+    min-height: 10vh;
+    min-width: 100 vw;
+    background-color: transparent;
+    color: aliceblue;
+    /* Lighter Gray */
 }
 
-img{
+img {
     max-width: 10vw;
     height: auto;
 }
