--- a/tri-harder/src/styles/header.css
+++ b/tri-harder/src/styles/header.css
@@ -51,3 +51,44 @@ img {
     color: aliceblue;
     margin: 2vw;
 }
+/* Default font size */
+  
+  /* Medium screens (tablets, 768px and up) */
+  @media (max-width: 768px) {
+    .logo {
+        position: absolute;
+    top: 20px; /* Adjust the top position as needed */
+    left: 60px; /* Adjust the left position as needed */
+    color: rgb(230, 218, 218); /* Set the logo text color */
+    font-size: 100px; /* Adjust the font size of the logo */
+    font-weight: bold; /* Make the logo text bold */
+    z-index: 1; 
+    }
+  }
+  
+  /* Small screens (mobile phones, 576px and up) */
+  @media (max-width: 576px) {
+    .logo {
+        position: absolute;
+    top: 20px; /* Adjust the top position as needed */
+    left: 60px; /* Adjust the left position as needed */
+    color: rgb(230, 218, 218); /* Set the logo text color */
+    font-size: 80px; /* Adjust the font size of the logo */
+    font-weight: bold; /* Make the logo text bold */
+    z-index: 1; 
+    }
+  }
+  
+  /* Extra small screens (mobile phones, less than 576px) */
+  @media (max-width: 375px) {
+    .logo {
+        position: absolute;
+    top: 20px; /* Adjust the top position as needed */
+    left: 60px; /* Adjust the left position as needed */
+    color: rgb(230, 218, 218); /* Set the logo text color */
+    font-size: 60px; /* Adjust the font size of the logo */
+    font-weight: bold; /* Make the logo text bold */
+    z-index: 1; 
+    }
+  }
+  
