--- a/tri-harder/src/styles/landing.css
+++ b/tri-harder/src/styles/landing.css
@@ -1,9 +1,8 @@
-h1 {
-    font-size: 20rem; /* Huge font size */
-    font-weight: bold; /* Bold text */
-    color: #9d7d7d; /* Dark color */
-    margin: 0;
-  }
-  image {
-    border: 1px solid red;
-  }
+
+
+.logo {
+    font-Size: '18rem';
+    font-weight: 'bold';
+    color: '#9d7d7d'
+}
+
