--- a/tri-harder/src/styles/header.css
+++ b/tri-harder/src/styles/header.css
@@ -27,11 +27,9 @@
     /* top: 20px; Adjust the top position as needed */
     /* left: 60px; Adjust the left position as needed */
     color: rgb(230, 218, 218); /* Set the logo text color */
-    font-size: 300px; /* Adjust the font size of the logo */
+    font-size: 20vw; /* Adjust the font size of the logo */
     font-weight: bold; /* Make the logo text bold */
     z-index: 1; 
-    border-top: 4px solid black;
-    border-bottom: 4px solid black;
   }
 
 .header-container { 
@@ -66,7 +64,7 @@ video::-webkit-media-controls {
     top: 20px; /* Adjust the top position as needed */
     /* left: 60px; Adjust the left position as needed */
     color: rgb(230, 218, 218); /* Set the logo text color */
-    font-size: 100px; /* Adjust the font size of the logo */
+    font-size: 30vw; /* Adjust the font size of the logo */
     font-weight: bold; /* Make the logo text bold */
     z-index: 1; 
     }
@@ -79,7 +77,7 @@ video::-webkit-media-controls {
     top: 120px; /* Adjust the top position as needed */
     /* left: 60px; Adjust the left position as needed */
     color: rgb(250, 247, 247); /* Set the logo text color */
-    font-size: 80px; /* Adjust the font size of the logo */
+    font-size: 20vw; /* Adjust the font size of the logo */
     font-weight: bold; /* Make the logo text bold */
     z-index: 1; 
     }
@@ -92,7 +90,7 @@ video::-webkit-media-controls {
     top: 220px; /* Adjust the top position as needed */
     /* left: 30px; Adjust the left position as needed */
     color: rgb(230, 218, 218); /* Set the logo text color */
-    font-size: 60px; /* Adjust the font size of the logo */
+    font-size: 10vw; /* Adjust the font size of the logo */
     font-weight: bold; /* Make the logo text bold */
     z-index: 1; 
     }
