--- a/tri-harder/src/App.css
+++ b/tri-harder/src/App.css
@@ -44,7 +44,7 @@ body {
 }
 
 .page-footer {
-  margin-top: auto;
+  margin-top: 50px;
   min-width: 100vw;
   background-color: #e0e0e0; /* Lighter Gray */
 }
