style: moved nav bar

--- a/tri-harder/src/styles/header.css
+++ b/tri-harder/src/styles/header.css
@@ -108,7 +108,7 @@ video::-webkit-media-controls {
 @media (max-width: 576px) {
     .logo {
         /* position: absolute; */
-        top: 60px;
+        top: 120px;
         /* Adjust the top position as needed */
         /* left: 60px; Adjust the left position as needed */
         color: rgb(250, 247, 247);
@@ -135,7 +135,7 @@ video::-webkit-media-controls {
 @media (max-width: 375px) {
     .logo {
         /* position: absolute; */
-        top: 340px;
+        top: 240px;
         /* Adjust the top position as needed */
         /* left: 30px; Adjust the left position as needed */
         color: rgb(230, 218, 218);
@@ -149,8 +149,8 @@ video::-webkit-media-controls {
 
     .register-button {
         position: absolute;
-        top: 320px;
-        /* Adjust the top position as needed */
+        top: 60vh;
+        left: 35vw; 
         z-index: 1;
 
     }
